# perso-2025b-RPFacco

./: CHANGELOG.md  LICENSE  README.md  palavras.txt  perso-2025b-RPFacco.cabal
app/: Main.hs  Termo.hs  testes.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
elm-stuff/0.19.1/: Main.elmi  Main.elmo
src/: Main.elm
static/: elm.js  index.html  styles.css
