cabal-version:      3.0
name:               perso-2025b-RPFacco
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             RPFacco
maintainer:         arpfacco@gmail.com
category:           Web Server
build-type:         Simple
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable perso-2025b-RPFacco
    import:           warnings
    main-is:          Main.hs

   
    default-language: Haskell2010
    other-extensions: OverloadedStrings


    build-depends:    
        base >=4.7 && <5,
        scotty,
        wai-extra,
        random,
        text


    hs-source-dirs:   app
    
